--- a/res/layout/layout_condition_query.xml
+++ b/res/layout/layout_condition_query.xml
@@ -3,7 +3,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/white"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:paddingBottom="10dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="10dp" >
 
     <LinearLayout
         android:layout_width="800dip"
@@ -11,48 +15,57 @@
         android:orientation="horizontal" >
 
         <TextView
+            style="@style/text_mid_size"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/text_mid_size"
-            android:text="定制查询" />
+            android:text="定制查询"
+            android:textSize="30sp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal" >
 
         <Button
             android:id="@+id/id_btn_condition_query_addition"
             style="@style/text_mid_size"
-            android:layout_width="100dip"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="+" />
+            android:background="@drawable/selector_query_addition" />
 
         <Button
             android:id="@+id/id_btn_condition_query_subtraction"
             style="@style/text_mid_size"
             android:layout_width="100dip"
             android:layout_height="wrap_content"
-            android:text="-" />
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/selector_query_subtraction" />
     </LinearLayout>
 
-    <ScrollView 
-          android:layout_width="match_parent"
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
-         <LinearLayout
-        android:id="@+id/id_llayout_item_container"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp" >
+
+        <LinearLayout
+            android:id="@+id/id_llayout_item_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
+
+    <Button
+        android:id="@+id/id_btn_condition_query_confirm"
+        style="@style/text_mid_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
-    </ScrollView>
-           <Button
-            android:id="@+id/id_btn_condition_query_confirm"
-            style="@style/text_mid_size"
-            android:layout_width="100dip"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:text="@string/confirm" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/selector_btn_search_confirm"
+        android:text="@string/confirm"
+        android:textColor="@color/white" />
 
 </LinearLayout>
