--- a/res/layout/layout_condition_query_compotent.xml
+++ b/res/layout/layout_condition_query_compotent.xml
@@ -7,18 +7,14 @@
     <Spinner
         android:id="@+id/id_spner_first"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
-        android:background="@drawable/png_spiner_bgk"
-        />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        
         android:text="地质对象" />
 
     <Spinner
-        android:background="@drawable/png_spiner_bgk"
         android:id="@+id/id_spner_geology"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -29,7 +25,6 @@
         android:text="条件" />
 
     <Spinner
-        android:background="@drawable/png_spiner_bgk"
         android:id="@+id/id_spner_condition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -40,7 +35,6 @@
         android:text="条件值" />
 
     <Spinner
-        android:background="@drawable/png_spiner_bgk"
          android:id="@+id/id_spner_condition_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -50,12 +44,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
         android:visibility="gone"
-        android:background="@drawable/png_edtxt_bg"
         android:hint="最小值"
         />
     <EditText
         android:hint="最大值"
-        android:background="@drawable/png_edtxt_bg"
         android:visibility="gone"
         android:id="@+id/id_spner_condition_custom_value2"
         android:layout_width="wrap_content"
